2003-05-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* comm.man: updated comm to v4.1
	* comm.tcl: rewrite of code to remove pseudo-object model.
	Clean up code, add send -command callback to allow for
	notification of results for asynchronous sends.

2003-05-09  Andreas Kupries  <andreask@activestate.com>

	* sak.tcl (modules_mod): Fixed incorrect check. Caused first
	  module to be reported as bogus although it isn't.

2003-05-08  Andreas Kupries  <andreask@activestate.com>

	* installer.tcl: Fixed typo in the code loading the new
	  'install_action.tcl', had used '...._actions'; note the trailing
	  's'. Thanks to Larry <lvirden@users.sourceforge.net> for
	  reporting this.

2003-05-07  Andreas Kupries  <andreask@activestate.com>

	* tcllib_version.tcl: Updated to 1.4.0.1 to distinguish the CVS
	  from the official release.

	* install_action.tcl:
	* installer.tcl:
	* sak.tcl: Lots of changes to make a number of command
	  module-ware. In the sense that they now work for individual
	  modules and not only for all in one go. The most important is
	  'validate'. IOW, it is now possible to validate a single module,
	  making this feature more convenient for a developer, as there is
	  less noise in the output. This required more sharing of code
	  with the installer.

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-05-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sak.tcl: Added a contributors command to list the contributors
	to the library. This is also used when generating the TIP55
	description file. Names are extracted from the ChangeLog files.

2003-05-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* modules/base64/base64.test:      
	* modules/base64/uuencode.test:     
	* modules/base64/yencode.test:     Various fixes to fix the
	* modules/control/ChangeLog:       testsuite for tcl versions
	* modules/control/do.test:         from 8.2 to 8.5